menu.css
/***************/
/* page layout */
/***************/

[id=menu] {
	position:fixed;
	width:25ex;
}
[id=content] {
	/* *****  EDIT THIS VALUE IF CONTENT OVERLAPS MENU ***** */
	position:absolute;
  left:29ex;
	padding-right:4ex;
}

/**************/
/* menu style */
/**************/

#menu .submenu {
	padding-top:1em;
	display:block;
}

#menu label {
	display:block;
	font-weight: bold;
	text-align: center;
	background-color: rgb(192,192,192);
}
#menu a {
	padding:0 .2em;
	display:block;
	text-align: center;
	background-color: rgb(235,235,235);
}
#menu a:visited {
	color:rgb(100,50,100);
}

